--- a/templates/_index.html
+++ b/templates/_index.html
@@ -3,8 +3,14 @@
 {% set elementType = 'Applications_Application' %}
 
 {% set tabs = {
-    applications: { label: "Applications"|t, url: url('applications') },
-    forms: 	   { label: "Forms"|t, url: url('applications/forms') }
+    applications: {
+        label: "Applications"|t,
+        url: url('applications')
+    },
+    forms: {
+        label: "Forms"|t,
+        url: url('applications/forms')
+    }
 } %}
 
 
