Add example code tab

--- a/templates/_index.html
+++ b/templates/_index.html
@@ -10,6 +10,10 @@
     forms: {
         label: "Forms"|t,
         url: url('applications/forms')
+    },
+    example: {
+        label: "Example"|t,
+        url: url('applications/example')
     }
 } %}
 
