--- a/templates/forms/index.html
+++ b/templates/forms/index.html
@@ -59,7 +59,7 @@
 
 	<div id="newformcontainer" class="buttons">
 
-		<a href="{{ url('applications/forms/new') }}" class="btn submit add icon">{{ "New form"|t }}</a>
+		<a href="{{ url('applications/forms/new') }}" class="btn submit add icon">{{ "New Form"|t }}</a>
 
 	</div>
 
