--- a/templates/_edit.html
+++ b/templates/_edit.html
@@ -3,9 +3,9 @@
 
 {# @TODO remove this soon as it doesnt work #}
 {% set applicationStatuses = {
-    'Approved': 'approved'|t,
-    'Denied': 'denied'|t,
-    'Pending': 'pending'|t
+    'Approved': 'Approved'|t,
+    'Denied': 'Denied'|t,
+    'Pending': 'Pending'|t
 } %}
 
 {% set formHandle = form.handle %}
@@ -25,12 +25,13 @@
 
         <div class="left" style="width: 40%;">
             {{ forms.textField({
-                label: "Applicants Name"|t,
-                id: 'name',
-                name: 'name',
-                instructions: "First and last name (i.e John Doe)",
-                value: application.name,
-                errors: application.getErrors('name'),
+                label: "First Name"|t,
+                id: 'firstName',
+                name: 'firstName',
+                instructions: "First name (i.e John)",
+                placeholder: "John",
+                value: application.firstName,
+                errors: application.getErrors('firstName'),
                 first: true,
                 autofocus: true,
                 required: true
@@ -39,12 +40,13 @@
 
         <div class="right" style="width: 50%">
             {{ forms.textField({
-                label: "Applicants Email"|t,
-                id: 'email',
-                name: 'email',
-                instructions: "Applicants email address, notifications will be sent to this email",
-                value: application.email,
-                errors: application.getErrors('email'),
+                label: "Last Name"|t,
+                id: 'lastName',
+                name: 'lastName',
+                instructions: "Last name (i.e Doe)",
+                placeholder: "Doe",
+                value: application.lastName,
+                errors: application.getErrors('lastName'),
                 required: true
             }) }}
         </div>
@@ -52,17 +54,33 @@
 
         <div class="left" style="width: 40%; margin-top: 21px">
             {{ forms.textField({
+                label: "Applicants Email"|t,
+                id: 'email',
+                name: 'email',
+                instructions: "Applicants email address, notifications will be sent to this email",
+                placeholder: "john.doe@gmail.com",
+                value: application.email,
+                errors: application.getErrors('email'),
+                required: true
+            }) }}
+        </div>
+
+
+        <div class="right" style="width: 50%; margin-top: 21px">
+            {{ forms.textField({
                 label: "Phone Number"|t,
                 id: 'phone',
                 name: 'phone',
                 instructions: "Applicants phone number",
+                placeholder: "555-555-5555",
                 value: application.phone,
                 errors: application.getErrors('phone'),
                 required: true
             }) }}
         </div>
+        <div class="clear"></div>
 
-        <div class="right" style="width: 50%; margin-top: 21px">
+        <div class="left" style="width: 40%; margin-top: 21px">
             {{ forms.dateField({
                 label: "Submit Date"|t,
                 id: 'submitDate',
@@ -73,20 +91,20 @@
                 required: true
             }) }}
         </div>
+
+        <div class="right" style="width: 50%; margin-top: 21px">
+            {# {{ forms.selectField({
+                label: "Status"|t,
+                id: 'status',
+                name: 'status',
+                instructions: "Current status of the application",
+                options: applicationStatuses,
+                value: application.status,
+            }) }} #}
+        </div>
         <div class="clear"></div>
-
         <hr>
 
-        {{ forms.selectField({
-            label: "Application Status"|t,
-            id: 'application.status',
-            name: 'application.status',
-			instructions: "Current status of the application",
-            options: applicationStatuses,
-            value: application.status,
-        }) }}
-
-        <hr>
 
         <div>
             {% for tab in form.getFieldLayout().getTabs() %}
@@ -99,7 +117,7 @@
             {% endfor %}
         </div>
 
-        <hr>
+        {# <hr> #}
 
         <div class="buttons">
             <div class="btngroup submit first">
