Comment out status

--- a/templates/_edit.html
+++ b/templates/_edit.html
@@ -93,14 +93,7 @@
         </div>
 
         <div class="right" style="width: 50%; margin-top: 21px">
-            {# {{ forms.selectField({
-                label: "Status"|t,
-                id: 'status',
-                name: 'status',
-                instructions: "Current status of the application",
-                options: applicationStatuses,
-                value: application.status,
-            }) }} #}
+            // ADD STATUS
         </div>
         <div class="clear"></div>
         <hr>
