Comment out docsUrl

--- a/templates/_index.html
+++ b/templates/_index.html
@@ -13,7 +13,7 @@
     }
 } %}
 
-{% set docsUrl = 'http://themccallister.com/plugins/applications/docs' %}
+{# {% set docsUrl = 'http://themccallister.com/plugins/applications/docs' %} #}
 
 
 {% block sidebar %}
