--- a/templates/forms/example.html
+++ b/templates/forms/example.html
@@ -34,27 +34,54 @@
 
 	<hr>
 
+	<h3>Form Header</h3>
+
 <pre><code>{% filter escape %}
 <form id="application-form" method="post" action="" accept-charset="UTF-8">
-<input type="hidden" name="action" value="applications/application">
-<input type="hidden" name="redirect" value="uri/to/thanks/page">
-<input type="hidden" name="formId" value="1">
+  <input type="hidden" name="action" value="applications/application">
+  <input type="hidden" name="redirect" value="uri/to/thanks/page">
+  <input type="hidden" name="formId" value="1">
+{% endfilter %}
+</code></pre>
 
+	<hr>
+	<h3>Required Fields</h3>
+
+<pre><code>{% filter escape %}
 <!-- Required Fields -->
-<label>Name
-	<input type="text" name="applicantName" placeholder="John Doe" />
+<label>First Name
+  <input type="text" name="firstName" placeholder="John" />
 </label>
+<label>Last Name
+  <input type="text" name="lastName" placeholder="Doe" />
+</label>
+
 <label>Email
-	<input type="text" name="applicantEmail" placeholder="JohnDoe@gmail.com" />
+  <input type="text" name="email" placeholder="JohnDoe@gmail.com" />
 </label>
 <label>Phone Number
-	<input type="text" name="applicantPhone" placeholder="555-555-555" />
+  <input type="text" name="phone" placeholder="555-555-555" />
 </label>
 <!-- End Required Fields -->
+{% endfilter %}
+</code></pre>
 
+	<hr>
+	<h3>Custom Fields</h3>
+
+<pre><code>{% filter escape %}
 <!-- My Custom Fields -->
-<textarea name="myCustomField" id="myCustomField" rows="8" cols="40"></textarea>
+<textarea name="myCustomTextAreaField" id="myCustomField" rows="8" cols="40"></textarea>
 
+<input type="text" name="myCustomTextField" value="">
+<!-- End Required Fields -->
+{% endfilter %}
+</code></pre>
+
+	<hr>
+	<h3>Form Footer</h3>
+
+<pre><code>{% filter escape %}
 <button type="submit">Apply Now</button>
 </form>
 {% endfilter %}
