--- a/templates/forms/_edit.html
+++ b/templates/forms/_edit.html
@@ -34,6 +34,16 @@
 			required: true
 		}) }}
 
+		<p>
+			<em>
+				<strong>Note</strong>: Adding new fields AFTER your website has
+				launched will require updatign your template code before the
+				fields will be available for use. If you have questions, please
+				work with your developer to ensure the fields will be added to
+				your websites front end templates.
+			</em>
+		</p>
+
 		<hr>
 
 		{% include "_includes/fieldlayoutdesigner" with {
