Update forms title

--- a/templates/forms/index.html
+++ b/templates/forms/index.html
@@ -1,5 +1,5 @@
 {% extends "_layouts/cp" %}
-{% set title = "Forms"|t %}
+{% set title = "Application Forms"|t %}
 
 {% set tabs = {
 	applications: {
