Update example code title

--- a/templates/forms/example.html
+++ b/templates/forms/example.html
@@ -1,5 +1,5 @@
 {% extends "_layouts/cp" %}
-{% set title = "Applications"|t %}
+{% set title = "Applications Example Code"|t %}
 
 {% set tabs = {
 	applications: {
