Abstract notes template for later use

--- a/templates/_edit.html
+++ b/templates/_edit.html
@@ -37,4 +37,7 @@
 
         {% include 'applications/_partials/buttons' %}
     </form>
+
+    {% include 'applications/_partials/notes' %}
+    
 {% endblock %}
