--- a/templates/_new.html
+++ b/templates/_new.html
@@ -18,16 +18,7 @@
 
     <hr>
 
-    <div>
-        {% for tab in form.getFieldLayout().getTabs() %}
-        <div id="tab{{ loop.index }}"{% if not loop.first %} class="hidden"{% endif %}>
-        {% include "_includes/fields" with {
-        fields: tab.getFields(),
-        element: application
-        } only %}
-    </div>
-    {% endfor %}
-    </div>
+    {% include 'applications/_partials/field-layout-tabs' %}
 
     <hr>
 
