--- a/templates/_partials/buttons.html
+++ b/templates/_partials/buttons.html
@@ -30,12 +30,8 @@
 	</div>
 
 	<div class="right">
-		<input type="button" class="btn formsubmit" value="{{ 'Add Note'|t }}" data-action="applications/pending"
-			data-confirm="{{ 'Are you sure you want to change this application to pending?'|t }}"
-			data-redirect="applications">
-		<input type="button" class="btn formsubmit" value="{{ 'Hide Notes'|t }}" data-action="applications/pending"
-			data-confirm="{{ 'Are you sure you want to change this application to pending?'|t }}"
-			data-redirect="applications">
+		<input type="button" class="btn formsubmit" value="{{ 'Add Note'|t }}">
+		<input type="button" class="btn formsubmit" value="{{ 'Hide Notes'|t }}">
 		<input type="button" class="btn formsubmit" value="{{ 'Delete'|t }}" data-action="applications/delete"
 			data-confirm="{{ 'Are you sure you want to delete this application?'|t }}"
 			data-redirect="applications">
