Remove notes to feature branch

--- a/templates/_edit.html
+++ b/templates/_edit.html
@@ -30,6 +30,6 @@
         {% include 'applications/_partials/buttons' %}
     </form>
 
-    {% include 'applications/_partials/notes' %}
+    {# {% include 'applications/_partials/notes' %} #}
 
 {% endblock %}
