Update type on new form creation

--- a/templates/forms/_edit.html
+++ b/templates/forms/_edit.html
@@ -35,13 +35,11 @@
 		}) }}
 
 		<p>
-			<em>
-				<strong>Note</strong>: Adding new fields AFTER your website has
-				launched will require updatign your template code before the
-				fields will be available for use. If you have questions, please
-				work with your developer to ensure the fields will be added to
-				your websites front end templates.
-			</em>
+			<em><strong>Note</strong>: Adding new fields <strong>after</strong> your website has
+			launched will require updating your template code <strong>before</strong> the
+			fields will be available for use. If you have questions, please
+			work with your developer to ensure the fields will be added to
+			your websites front end templates.</em>
 		</p>
 
 		<hr>
