--- a/templates/_partials/buttons.html
+++ b/templates/_partials/buttons.html
@@ -11,29 +11,32 @@
 				</ul>
 			</div>
 		</div>
-
-		{% if application.status != 'approved' %}
-		<input type="button" class="btn formsubmit" value="{{ 'Approve'|t }}" data-action="applications/approve"
-			data-confirm="{{ 'Are you sure you want to change this application to approved?'|t }}"
-			data-redirect="applications">
-		{% endif %}
-		{% if application.status != 'denied' %}
-		<input type="button" class="btn formsubmit" value="{{ 'Deny'|t }}" data-action="applications/deny"
-			data-confirm="{{ 'Are you sure you want to change this application to denied?'|t }}"
-			data-redirect="applications">
-		{% endif %}
-		{% if application.status != 'pending' %}
-		<input type="button" class="btn formsubmit" value="{{ 'Pending'|t }}" data-action="applications/pending"
-			data-confirm="{{ 'Are you sure you want to change this application to pending?'|t }}"
-			data-redirect="applications">
+		{% if application.id is not null %}
+			{% if application.status != 'approved' %}
+			<input type="button" class="btn formsubmit" value="{{ 'Approve'|t }}" data-action="applications/approve"
+				data-confirm="{{ 'Are you sure you want to change this application to approved?'|t }}"
+				data-redirect="applications">
+			{% endif %}
+			{% if application.status != 'denied' %}
+			<input type="button" class="btn formsubmit" value="{{ 'Deny'|t }}" data-action="applications/deny"
+				data-confirm="{{ 'Are you sure you want to change this application to denied?'|t }}"
+				data-redirect="applications">
+			{% endif %}
+			{% if application.status != 'pending' %}
+			<input type="button" class="btn formsubmit" value="{{ 'Pending'|t }}" data-action="applications/pending"
+				data-confirm="{{ 'Are you sure you want to change this application to pending?'|t }}"
+				data-redirect="applications">
+			{% endif %}
 		{% endif %}
 	</div>
 
+	{% if application.id is not null %}
 	<div class="right">
-		<input type="button" class="btn formsubmit" value="{{ 'Add Note'|t }}">
-		<input type="button" class="btn formsubmit" value="{{ 'Hide Notes'|t }}">
+		{# <input type="button" class="btn formsubmit" value="{{ 'Add Note'|t }}"> #}
+		{# <input type="button" class="btn formsubmit" value="{{ 'Hide Notes'|t }}"> #}
 		<input type="button" class="btn formsubmit" value="{{ 'Delete'|t }}" data-action="applications/delete"
 			data-confirm="{{ 'Are you sure you want to delete this application?'|t }}"
 			data-redirect="applications">
 	</div>
+	{% endif %}
 </div>
