--- a/templates/_partials/notes.html
+++ b/templates/_partials/notes.html
@@ -1,3 +1,17 @@
-<div id="new-note" class="">
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi soluta error officiis voluptas necessitatibus modi voluptatem vitae pariatur incidunt blanditiis iure corporis tenetur quo, excepturi asperiores maiores veritatis alias veniam!</p>
+<div id="application-notes" class="hidden">
+
+<hr>
+
+<h2>Notes:</h2>
+	{% for i in 1..5 %}
+	<hr>
+	<div class="note">
+
+		<h3>Stephanie Nisan <span>{{ now | date('F, dS Y') }}</span></h3>
+		<p>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+		in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</p>
+	</div>
+	{% endfor %}
 </div>
