--- a/templates/_partials/buttons.html
+++ b/templates/_partials/buttons.html
@@ -32,8 +32,10 @@
 
     {% if application.id is not null %}
     <div class="right">
-        <input type="button" class="btn formsubmit" value="{{ 'Add Note'|t }}">
-        <input type="button" class="btn formsubmit" value="{{ 'Hide Notes'|t }}">
+        <input type="button" class="btn formsubmit" value="{{ 'Add Note'|t }}" name="add-note">
+        {% if notes is not null %}
+        <input type="button" class="btn formsubmit" value="{{ 'Show Notes'|t }}" name="notes-toggle">
+        {% endif %}
         <input type="button" class="btn formsubmit" value="{{ 'Delete'|t }}" data-action="applications/delete"
             data-confirm="{{ 'Are you sure you want to delete this application?'|t }}"
             data-redirect="applications">
